# wirecode

./: .gitignore  README.md  labview.py  pyproject.toml  setup.py
examples/: plan.txt
labview/: count_integrations.vi  generate_circle_plan.vi  generate_square_plan.vi  get_python_library_path.vi  label_integrals.vi  labview_bindings.py  plan_to_coordinates.vi  plan_to_grbl.vi  test.vi  test_generator.vi  wirecode.lvproj  write_results.vi
tests/: test_gcode.py  test_geometry.py  test_plans.py  test_processors.py  test_wirecode.py
wirecode/: __init__.py  gcode.py  geometry.py  plans.py  processors.py  tools.py
